[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-cors = '0.6.0'
jsonwebtoken = "8.1.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.22"
serde_json = "1.0"
actix-web-actors = "4.1"
