[package]
name = "BACKEND"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite ={ version ="0.21.0", features = ["native-tls"]}
futures-util="0.3.29"


